🐛 FIX: Header logo on mobile

--- a/apps/baseai.dev/src/styles/webgl.css
+++ b/apps/baseai.dev/src/styles/webgl.css
@@ -3,9 +3,6 @@
   img {
     @apply inline-block;
   }
-  img {
-    display: inline-block !important;
-  }
 }
 @tailwind components;
 @tailwind utilities;
